[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Server.gd" type="Script" id=1]
[ext_resource path="res://Scenes/StateProcessing.gd" type="Script" id=2]
[ext_resource path="res://Scenes/WorldGenerator.gd" type="Script" id=3]
[ext_resource path="res://tileset.tres" type="TileSet" id=4]
[ext_resource path="res://name_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/TileMap.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Camera2D.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.2, 0.294118, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.2, 0.294118, 1 )

[node name="Server" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 44.0
margin_top = 285.0
margin_right = 200.0
margin_bottom = 322.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 5 )
text = "Start Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxPlayersInput" type="TextEdit" parent="CanvasLayer/Button"]
margin_top = -181.0
margin_right = 156.0
margin_bottom = -141.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortInput" type="TextEdit" parent="CanvasLayer/Button"]
margin_top = -123.0
margin_right = 156.0
margin_bottom = -83.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "25565"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedInput" type="TextEdit" parent="CanvasLayer/Button"]
margin_top = -68.0
margin_right = 156.0
margin_bottom = -28.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateProcessing" type="Node" parent="."]
script = ExtResource( 2 )

[node name="WorldGenerator" type="Node" parent="."]
script = ExtResource( 3 )
worldDepth = 300
seed_number = 1

[node name="TileMap" type="TileMap" parent="WorldGenerator"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 5, 5 )
script = ExtResource( 7 )
[connection signal="button_down" from="CanvasLayer/Button" to="." method="_on_Button_button_down"]
